@@ -97,7 +97,7 @@
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
-                        <version>0.10.4</version>
+                        <version>1.1.1</version>
                         <configuration>
                             <!--                                               -->
                             <agent>
@@ -111,6 +111,8 @@
                                 <buildArg>--no-fallback</buildArg>
                                 <buildArg>--enable-url-protocols=http,https</buildArg>
                                 <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <!-- FFM (java.lang.foreign) 原生访问 -->
+                                <buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
                                 <!--                    SPI        -->
                                 <buildArg>--initialize-at-build-time=org.slf4j</buildArg>
                             </buildArgs>
